--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,5 +18,9 @@
   },
   "devDependencies": {
     "@types/mongoose": "^5.11.96"
+  },
+  "scripts": {
+    "postinstall": "npm install --legacy-peer-deps"
   }
+
 }
